# pythorust_tg

./: .coveragerc  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONFIGURATION_SUMMARY.md  Cargo.toml  DASHA_TOOLS.md  ENV_SETUP.md  README.md  ab_test_report.py  ab_testing.py  ai_project_consultant.py  ai_service.py  analyze_with_lightrag.py  autoanswer.py  autoanswer_refactored.py  bfl_sales_bot.py  bfl_sales_bot.session-journal  bot_analytics.py  bulk_reactions.py  chat_analyzer.py  chat_export_utils.py  check_all_chats_tasks.py  collect_chat_ideas.py  cov.json  create_linear_tasks.py  create_venv.cmd  credit_expert_bot.py  delete_my_msgs.py  delete_unanswered.py  delete_zoom_messages.py  devops_ai_bot.py  devops_bot.yml  download_chat.py  download_user_chat.py  evaluate_dialogs.py  export_any_chat.py  export_chat.py  (+40 more)
.claude/agents/: architecture-documenter.md  codev-updater.md  spider-protocol-updater.md  tdd-coder.md
.claude/commands/: blue.md  green.md  red.md  tdd-base.md
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml
.junie/: guidelines.md
analysis_results/: all_chats_tasks.md  chat_ideas.md  profitable_prompts_analysis.md  vibecoders_needs_analysis.md
benches/: text_processing.rs
chat_analysis/: __init__.py  analyzer.py  config.py  fetcher.py  llm_analyzer.py  llm_analyzer_refactored.py  llm_providers.py  models.py  utils.py
codev/agents/: architecture-documenter.md  codev-updater.md  spider-protocol-updater.md  tdd-refactorer.md  tdd-tester.md
codev/plans/: 0001-telegram-automation-quality.md  0002-helpdesk-autopilot.md  0003-chat-analyzer-plan.md  0003-hr-ai-interviewer.md  0004-telegram-automation-innovation.md  0005-credit-expert-bot.md  0006-development-roadmap.md  0007-vibecoding-tools-integration.md  ai-prompts-sales-pack-implementation.md  figma-pixel-perfect-plugin.md  projects_from_chats.md  projects_revenue_roadmap.md  python-to-rust-migration.md
codev/protocols/spider-solo/: protocol.md
codev/reviews/: 0001-telegram-automation-quality.md
codev/specs/: 0002-helpdesk-autopilot.md  0003-chat-analyzer.md  0003-hr-ai-interviewer.md  0004-devops-ai-assistant.md  0004-monetization-projects-spec.md  0005-credit-expert-bot.md  0005-rust-k9s.md  0006-stories-api.md  spec-2025-11-23-neuro-sales-agent.md
features/: ai_project_consultant.feature  bfl_sales_bot.feature  credit_expert_bot.feature  environment.py  linear.feature  n8n_tools.feature  openai.feature  prompts.feature  task_assistant_bot.feature  telegram.feature
features/steps/: ai_project_consultant_steps.py  bfl_sales_bot_steps.py  credit_expert_bot_steps.py  linear_steps.py  n8n_tools_steps.py  openai_steps.py  prompts_steps.py  task_assistant_bot_steps.py  telegram_steps.py
hara_site/: index.html
integrations/: __init__.py  aws_client.py  claude_client.py  gemini_client.py  kurigram_client.py  lightrag_setup.py  ollama_client.py  ollama_setup.sh  openai_client.py  prompts.py  yandex_tts.py
migrations/: 001_create_viral_questions.sql
prompts/: calculator.md  chat_categorizer.md  crm_parser.md  digest.md  extract_wishes.md  friendly_ai.md  hara_website_design.md  moderator.md  sales_agent.md
prompts/sales_pack/: 01_cold_email_generator.md  02_linkedin_outreach_template.md  03_sales_battlecard_creator.md  04_objection_handler.md
rust_telegram/: .gitignore  Cargo.toml  README.md
rust_telegram/.cargo/: mutants.toml
rust_telegram/benches/: text_processing.rs
rust_telegram/src/: chat.rs  config.rs  export.rs  lib.rs  linear.rs  main.rs  prompts.rs  reactions.rs  session.rs
rust_telegram/src/analysis/: graph_db.rs  mod.rs  models.rs  vector_db.rs
rust_telegram/src/commands/: active_chats.rs  autoanswer.rs  crm.rs  delete_zoom.rs  digest.rs  export.rs  hunt.rs  index.rs  init_session.rs  linear.rs  linear_bot.rs  list_chats.rs  mod.rs  moderate.rs  monitor.rs  read.rs  search.rs  send_message.rs  tg.rs
rust_telegram/src/integrations/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  yandex_tts.rs
rust_telegram/src/lightrag/: chunker.rs  entity_extractor.rs  graph.rs  retriever.rs
src/: chat.rs  config.rs  error.rs  export.rs  lib.rs  linear.rs  main.rs  metrics.rs  prompts.rs  reactions.rs  session.rs
src/analysis/: embeddings.rs  graph_db.rs  mod.rs  models.rs  vector_db.rs
src/analytics/: ab_testing.rs  bot_analytics.rs  evaluate_dialogs.rs  mod.rs
src/commands/: active_chats.rs  autoanswer.rs  chat_analyzer.rs  crm.rs  delete_zoom.rs  dialogs.rs  digest.rs  download_chat.rs  download_user_chat.rs  export.rs  export_chats_mysql.rs  hunt.rs  index.rs  init_session.rs  lightrag.rs  like.rs  linear.rs  linear_bot.rs  list_chats.rs  mod.rs  moderate.rs  monitor.rs  n8n.rs  react.rs  read.rs  search.rs  send_message.rs  send_viral.rs  tg.rs
src/integrations/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  yandex_tts.rs
src/lightrag/: chunker.rs  entity_extractor.rs  graph.rs  mod.rs  retriever.rs
src/n8n/: backup.rs  mod.rs  monitor.rs
tests/: conftest.py  integration_tests.rs  rust_unit_tests.rs  test_autoanswer.py  test_aws_client.py  test_bfl_sales_bot.py  test_chat_export_utils.py  test_check_eks.py  test_claude_client.py  test_gemini_client.py  test_kurigram_client.py  test_lightrag_setup.py  test_linear_bot.py  test_linear_client.py  test_mysql_logger.py  test_ollama_client.py  test_openai_client.py  test_prompts.py  test_read.py  test_telegram_session.py  test_tg.py  test_utilities.py  test_yandex_tts.py
tests/chat_analysis/: test_config.py  test_models.py  test_utils.py
tests/commands/: mod.rs  test_active_chats.rs  test_export.rs  test_init_session.rs
tests/integrations/: test_aws_client.py  test_kurigram_client.py  test_openai_client.py  test_yandex_tts.py
tests/playwright/: package-lock.json  package.json  playwright.config.ts
tests/playwright/tests/: example-site.spec.ts  vibecode.spec.ts
