[package]
name = "telegram_reader"
version = "0.1.0"
edition = "2021"
description = "Telegram Chat Reader & Auto-responder in Rust"
authors = ["Example Author"]

[lib]
name = "telegram_reader"
path = "src/lib.rs"

[[bin]]
name = "telegram_reader"
path = "src/main.rs"

[[bin]]
name = "init_session"
path = "src/bin/init_session.rs"

[[bin]]
name = "read_chat"
path = "src/bin/read_chat.rs"

[[bin]]
name = "tg"
path = "src/bin/tg.rs"

[[bin]]
name = "list_chats"
path = "src/bin/list_chats.rs"

[[bin]]
name = "get_active_chats"
path = "src/bin/get_active_chats.rs"

[[bin]]
name = "export_chat"
path = "src/bin/export_chat.rs"

[[bin]]
name = "delete_zoom_messages"
path = "src/bin/delete_zoom_messages.rs"

[[bin]]
name = "autoanswer"
path = "src/bin/autoanswer.rs"

[[bin]]
name = "download_chat"
path = "src/bin/download_chat.rs"

[[bin]]
name = "download_user_chat"
path = "src/bin/download_user_chat.rs"

[[bin]]
name = "linear_bot"
path = "src/bin/linear_bot.rs"

[[bin]]
name = "send_message"
path = "src/bin/send_message.rs"

[[bin]]
name = "index_messages"
path = "src/bin/index_messages.rs"

[[bin]]
name = "chat_stats"
path = "src/bin/chat_stats.rs"

[[bin]]
name = "search_messages"
path = "src/bin/search_messages.rs"

[[bin]]
name = "delete_unanswered"
path = "src/bin/delete_unanswered.rs"

[[bin]]
name = "find_user"
path = "src/bin/find_user.rs"

[[bin]]
name = "like_messages"
path = "src/bin/like_messages.rs"

[[bin]]
name = "message_digest"
path = "src/bin/message_digest.rs"

[[bin]]
name = "site_monitor"
path = "src/bin/site_monitor.rs"

[[bin]]
name = "http_bench"
path = "src/bin/http_bench.rs"

[[bin]]
name = "test_gemini"
path = "src/bin/test_gemini.rs"

[[bin]]
name = "k8s_dash"
path = "src/bin/k8s_dash.rs"

[dependencies]
# Telegram MTProto client
grammers-client = "0.8"
grammers-session = "0.8"
grammers-tl-types = "0.8"
grammers-mtsender = "0.8"

# Async runtime
tokio = { version = "1.44", features = ["full", "signal"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File locking (cross-platform)
fs2 = "0.4"

# HTTP client for OpenAI
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Async OpenAI client
async-openai = "0.28"

# Environment variables
dotenvy = "0.15"

# Regex for message filtering
regex = "1.11"

# Base64 encoding (for Gemini image API)
base64 = "0.22"

# Vector database (Qdrant)
qdrant-client = "1.16"

# Graph database (Neo4j)
neo4rs = "0.8"

# UUID generation
uuid = { version = "1.16", features = ["v4", "serde"] }

# Futures utilities
futures = "0.3"

# CSV export
csv = "1.3"

# JSON Schema (для API запросов)
schemars = "0.8"

# MySQL database (using mysql_async to avoid sqlite conflict)
mysql_async = "0.34"

# Kubernetes client
kube = { version = "0.98", features = ["client", "config", "runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }

[dev-dependencies]
tokio-test = "0.4"
httpmock = "0.8"
tempfile = "3.15"
criterion = "0.5"

# =============================================================================
# Build Profiles
# =============================================================================

# Dev profile - максимально быстрая сборка для разработки
[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256      # Больше единиц = быстрее компиляция

# Dev dependencies - компилируются с оптимизациями для быстрых тестов
[profile.dev.package."*"]
opt-level = 2            # Оптимизируем зависимости

# Release profile - баланс скорости сборки и производительности
[profile.release]
opt-level = 3
lto = "thin"             # Thin LTO вместо fat - намного быстрее
codegen-units = 16       # Больше единиц = быстрее компиляция
panic = "abort"
strip = true
incremental = true       # Инкрементальная сборка

# Release-fast - быстрая release сборка для CI/CD
[profile.release-fast]
inherits = "release"
lto = false              # Без LTO = быстрее
codegen-units = 16
incremental = true

# Release-optimized - максимальная производительность (медленная сборка)
[profile.release-optimized]
inherits = "release"
opt-level = 3
lto = "fat"              # Full LTO для максимальной оптимизации
codegen-units = 1        # Одна единица = лучшая оптимизация
strip = true
incremental = false

[[bench]]
name = "text_processing"
harness = false
