[project]
name = "my-telegram"
version = "0.1.0"
description = "Telegram chat reader and auto-responder toolkit"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.38.1",
    "openai>=1.59.5",
    "mcp>=1.22.0,<2.0.0",
    "requests>=2.32.3",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "behave>=1.2.6",
    "kurigram>=2.2.15",
    "PyYAML>=6.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = [".", "integrations"]
omit = ["tests/*", "rust_telegram/*", "codev/*", ".claude/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
