[project]
name = "my-telegram"
version = "0.1.0"
description = "Telegram chat reader and auto-responder toolkit"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.38.1",
    "openai>=1.59.5",
    "mcp>=1.22.0,<2.0.0",
    "requests>=2.32.3",
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.1",
    "behave>=1.2.6",
    "kurigram>=2.2.15",
    "PyYAML>=6.0.2",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["integrations"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    ".venv/*",
    "venv/*",
    "rust_telegram/*",
    "codev/*",
    ".claude/*",
    "integrations/lightrag_setup.py",
    "integrations/aws_client.py",
    "integrations/kurigram_client.py",
    "integrations/openai_client.py",
    "integrations/claude_client.py",
    "integrations/gemini_client.py",
    "integrations/yandex_tts.py",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E402",  # Module level import not at top of file (needed for test structure)
    "E501",  # Line too long (handled by formatter)
    "E722",  # Do not use bare except
    "E741",  # Ambiguous variable name
    "W291",  # Trailing whitespace
    "W292",  # No newline at end of file
    "W293",  # Blank line contains whitespace
    "F401",  # Imported but unused
    "F811",  # Redefinition of unused name from line N
    "F841",  # Local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]  # Allow imports in tests

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError",
]
show_missing = true
precision = 2
fail_under = 90
